[package]
name = "certo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
env_logger = "0.9.1"
log = "0.4.17"
rustls = { version = "0.20.6" }
rustls-native-certs = "0.6.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
time = "0.3.15"
webpki-roots = "0.22.5"
x509-parser = "0.14.0"
