[package]
categories = ["command-line-utilities"]
description = "A Small SSL Certificate Watchdog"
edition = "2021"
homepage = "https://github.com/Arvil/certo"
keywords = ["certificate", "watchdog"]
license = "MIT"
name = "certo"
repository = "https://github.com/Arvil/certo"
version = "0.1.2"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.21"
rayon = "1.7.0"
rustls = { version = "0.23.15" }
rustls-native-certs = "0.6.3"
rustls-pemfile = "1.0.3"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.109"
thiserror = "1.0.47"
time = "0.3.26"
webpki-roots = "0.25.2"
x509-parser = "0.15.1"
