[package]
categories = ["command-line-utilities"]
description = "A Small SSL Certificate Watchdog"
edition = "2021"
homepage = "https://github.com/Arvil/certo"
keywords = ["certificate", "watchdog"]
license = "MIT"
name = "certo"
repository = "https://github.com/Arvil/certo"
version = "0.1.4"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
rayon = "1.7.0"
rustls = { version = "0.23.26" }
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.11.0"
rustls-webpki = "0.103.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = "0.3.41"
webpki-roots = "0.26.8"
x509-parser = "0.17.0"
